--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,11 @@ img {
     height: auto;
 }
 
-.body-class {
-    font-family: "Roboto", sans-serif;
-    color: var(--text);
-    background-color: var(--white-background);
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0%;
 }
+
 body {
 font-family: "Roboto", sans-serif;
 color: var(--text);
