--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,9 @@ color: var(--presse-state);
 .section {
     background-color: var(--hero-background);
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
 }
 
 .text {
