--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,10 @@ img {
     max-width: 100%;
     height: auto;
 }
-
+ svg{
+    width: 64;
+    height: 64;
+ }
 
 h1, h2, h3, h4, h5, h6, p {
     margin: 0%;
@@ -195,6 +198,20 @@ background-color: var(--presse-state);
 }
 
 /* Section 2 */
+
+.strategy {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+
+
+}
+
+
  
 .studio{
     padding: 120px 0;   
