--- a/css/styles.css
+++ b/css/styles.css
@@ -46,11 +46,14 @@ background-color: var(--white-background);
     align-items: center;
 }
 .container{
-    width: 1158px;
+   
     padding: 0 15px;
     margin: 0 auto;
+    padding: 32px 0
    
 }
+ /*width: 1158px;*/
+
 ul {
 
     padding-left: 0%;
@@ -271,6 +274,11 @@ background-color: var(--presse-state);
 .contacts{
     background-color: var(--light);
     padding: 120px 0;   
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
+    
 }
 .list-four{
     display: flex;
@@ -295,6 +303,36 @@ background-color: var(--presse-state);
     text-align: center;
 }
 
+.ellipse {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+
+}
+.ellipse-list{
+    width: 40px;
+    height: 40px;
+
+}
+.ellipse-a{
+    width: 100%;
+    height: 100%;
+    background-color:var(--primary-brand);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ellipse-a :hover{
+    background-color: var(--presse-state);
+}
+.ellipse-a :focus{
+    background-color: var(--presse-state);
+
+}
+.svg-ellipse{
+    fill:var(--light)
+}
 /* footer*/
 
 footer{
