--- a/css/styles.css
+++ b/css/styles.css
@@ -283,16 +283,21 @@ background-color: var(--presse-state);
 .list-four{
     display: flex;
     gap: 24px;
+    
 }
 .team {
     background-color: var(--white-background);
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .employee{
     padding: 32px 16px;
     border-radius: 0px 0px 4px 4px;
     text-align: center;
+    padding: 32px 0;
 
 }
 .paragraph-contacts {
