--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,8 @@ background-color: var(--white-background);
    
     padding: 0 15px;
     margin: 0 auto;
-    padding: 32px 0
+    padding: 32px 0;
+    width: 1158px;
    
 }
  /*width: 1158px;*/
