--- a/css/styles.css
+++ b/css/styles.css
@@ -394,11 +394,15 @@ footer{
     padding: 100px 0;
 }
 .footer-div{
-    display: flex;
-    align-items: baseline,
+margin-right: 120px;
+    
 }
 .footer-text{
-    margin-right: 120px
+    margin-right: 120px;
+    display: flex;
+    align-items: baseline,
+   
+    
 }
 .span{
     color:var(--light)
@@ -430,6 +434,11 @@ footer{
 .media-element{
     width: 40px;
     height: 40px;
+}
+.ellipse-media {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
 
 /* portfolio*/
