--- a/css/styles.css
+++ b/css/styles.css
@@ -441,6 +441,21 @@ margin-right: 120px;
     justify-content: center;
     gap: 16px;
 }
+.ellipse-aa {
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-brand);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ellipse-aa :hover{
+    background-color: #31d0aa;
+}
+.ellipse-aa :focus{
+    background-color: #31d0aa;
+}
 
 /* portfolio*/
 
