--- a/css/styles.css
+++ b/css/styles.css
@@ -157,13 +157,13 @@ color: var(--presse-state);
 
 .section {
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people/people.png);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-color: var(--hero-background);
-    background-image: url(../images/people/people.png);
+   
     
 }
 
