--- a/css/styles.css
+++ b/css/styles.css
@@ -175,8 +175,8 @@ color: var(--presse-state);
     color: var(--white-background);
     max-width: 496px;
     margin-left: auto;
-    margin-right: auto
-    
+    margin-right: auto;
+    margin-bottom: 48px;
 
 }
 .button{
@@ -214,7 +214,7 @@ background-color: var(--presse-state);
     background-color: #f4f4fd;
     border-radius: 4px;
     margin-bottom: 8px;
-
+    
 
 }
 
@@ -363,6 +363,7 @@ background-color: var(--presse-state);
     line-height: 1.1;
     color: var(--modal-overlay);
     margin-bottom: 72px;
+    text-align: center;
 }
 .customers-link{
     width: 100%;
@@ -378,10 +379,13 @@ background-color: var(--presse-state);
 .customers-link:hover {
     border-color: #404bbf;
     color: #404bbf;
+    
 }
 .customers-link:focus {
     border-color: #404bbf;
     color: #404bbf;
+    
+    
 
 }
 .customers-svg{
